--- a/Zuimei/zuimeigeci/MySite/View/MySiteHeaderViewController.xib
+++ b/Zuimei/zuimeigeci/MySite/View/MySiteHeaderViewController.xib
@@ -14,10 +14,11 @@
                 <outlet property="iconImageView" destination="iV5-LD-plY" id="0dn-q0-CZD"/>
                 <outlet property="userNameLabel" destination="lXs-5S-iZK" id="Xei-3i-0e3"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="xxxx" destination="UUL-l3-0kx" id="fqR-G3-OKB"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT" customClass="UICollectionReusableView">
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -46,7 +47,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JX2-8t-pZy">
-                    <rect key="frame" x="160" y="166" width="160" height="80"/>
+                    <rect key="frame" x="160" y="165.5" width="160" height="80"/>
                     <animations/>
                     <color key="backgroundColor" red="0.15165917579999999" green="0.96299898620000002" blue="0.98232322930000004" alpha="1" colorSpace="calibratedRGB"/>
                     <state key="normal" title="新建碎碎念"/>
@@ -55,14 +56,14 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lXs-5S-iZK">
-                    <rect key="frame" x="138" y="125" width="45" height="21"/>
+                    <rect key="frame" x="138" y="125" width="45" height="20.5"/>
                     <animations/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jZU-YI-Fa6">
-                    <rect key="frame" x="0.0" y="246" width="160" height="30"/>
+                    <rect key="frame" x="0.0" y="245.5" width="160" height="30"/>
                     <animations/>
                     <color key="backgroundColor" red="0.33882485239999999" green="0.6045458628" blue="0.05176406041" alpha="1" colorSpace="calibratedRGB"/>
                     <state key="normal" title="我喜欢的"/>
@@ -71,7 +72,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pzd-Ox-o4l">
-                    <rect key="frame" x="160" y="246" width="160" height="30"/>
+                    <rect key="frame" x="160" y="245.5" width="160" height="30"/>
                     <animations/>
                     <color key="backgroundColor" red="0.35190284840000002" green="0.63411257249999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <state key="normal" title="我发表的"/>
@@ -80,7 +81,7 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4p9-qr-nyR">
-                    <rect key="frame" x="0.0" y="273" width="160" height="3"/>
+                    <rect key="frame" x="0.0" y="272.5" width="160" height="3"/>
                     <animations/>
                     <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                     <constraints>
